Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-2554

pa.array type inference bug when using NS-timestamp

    XMLWordPrintableJSON

Details

    Description

      The following fails:

      import pandas as pd
      import pyarrow as pa
      
      pa.array([pd.Timestamp('now').to_datetime64()])
      

      with ArrowNotImplementedError: Cannot convert NumPy datetime64 objects with differing unit, but when you provide the correct type information directly, it works:

      import pandas as pd
      import pyarrow as pa
      
      pa.array([pd.Timestamp('now').to_datetime64()], type=pa.timestamp('ns'))
      

      Attachments

        Issue Links

          Activity

            People

              marco.neumann.by Marco Neumann
              marco.neumann.by Marco Neumann
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m