ARROW-2554: fix timestamp unit detection from python lists